--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 </head>
 <body>
-
   <nav class="navbar">
       <h1 class="logo"><a href="index.html">Kyrgyzfilm</a></h1>
       <ul class="nav-menu">
         <button id="menuToggle" class="hamburger">
-  <span></span><span></span><span></span>
-</button>
+          <span></span><span></span><span></span>
+        </button>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="explore.html">Explore</a></li>
         <li><a href="profile.html">Profile</a></li>
@@ -50,6 +49,7 @@
     <div class="movie-card">
       <img src="" alt="" class="movie-img"/>
       <h3 class="movie-title"></h3>
+      <p class="movie-synopsis"></p>
       <div class="movie-actions">
         <button class="btn btn-primary watch-btn">Watch</button>
         <button class="btn btn-secondary save-btn">Save</button>
@@ -73,5 +73,5 @@
   </footer>
 
   <script src="app.js"></script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93e1bc1fea551df9',t:'MTc0Njk2NzEyMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
